--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@ideasio/add-to-homescreen-react",
-  "version": "1.0.10",
-  "description": "A React component providing add-to-home-screen functionality for progressive webapps on different platforms and browsers.",
+  "name": "@mahpooya/add-to-homescreen-react",
+  "version": "1.0.11",
+  "description": "A React component providing add-to-home-screen functionality for progressive webapps on different platforms and browsers (Fork for update dependencies and webpack)",
   "main": "build/AddToHomeScreen.js",
   "license": "LGPL-3.0-only",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/as-ideas/add-to-homescreen-react.git"
+    "url": "git+https://github.com/mahpooya/add-to-homescreen-react.git"
   },
   "keywords": [
     "react",
@@ -17,10 +17,13 @@
     "desktop"
   ],
   "author": "Axel Springer Ideas Engineering GmbH",
+  "contributors": [
+    "Mahpooya Damavand <mahpooya@gmail.com>"
+  ],
   "bugs": {
     "url": "https://github.com/as-ideas/add-to-homescreen-react/issues"
   },
-  "homepage": "https://github.com/as-ideas/add-to-homescreen-react/blob/master/README.md",
+  "homepage": "https://github.com/mahpooya/add-to-homescreen-react/blob/master/README.md",
   "scripts": {
     "build": "webpack --mode production",
     "build:example-basic-integration": "webpack --mode production --config=examples/basic-integration/webpack.config.js",
@@ -36,30 +39,33 @@
     "deploy:live-demo": "gh-pages -d live-demo/dist"
   },
   "peerDependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react": "^0.14 || ^15 || ^16 || ^17 || ^18",
+    "react-dom": "^0.14 || ^15 || ^16 || ^17 || ^18"
   },
   "devDependencies": {
-    "@babel/core": "7.16.0",
-    "@babel/preset-env": "7.16.0",
-    "@babel/preset-react": "7.16.0",
-    "babel-loader": "8.2.2",
-    "babel-plugin-macros": "3.0.1",
-    "copy-webpack-plugin": "6.0.2",
-    "css-loader": "5.0.2",
+    "@babel/core": "7.23.2",
+    "@babel/preset-env": "7.23.2",
+    "@babel/preset-react": "7.22.15",
+    "babel-loader": "9.1.3",
+    "babel-plugin-macros": "3.1.0",
+    "copy-webpack-plugin": "11.0.0",
+    "css-loader": "6.8.1",
     "css-mediaquery": "0.1.2",
     "file-loader": "6.2.0",
-    "gh-pages": "3.1.0",
-    "html-webpack-plugin": "4.3.0",
-    "node-sass": "6.0.0",
-    "prop-types": "15.7.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass-loader": "10.2.0",
-    "style-loader": "1.2.1",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.11.0",
-    "webpack-node-externals": "1.7.2"
+    "gh-pages": "6.0.0",
+    "html-webpack-plugin": "5.5.3",
+    "node-sass": "9.0.0",
+    "prop-types": "15.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sass-loader": "13.3.2",
+    "style-loader": "3.3.3",
+    "webpack": "5.89.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "4.15.1",
+    "webpack-node-externals": "3.0.0"
+  },
+  "directories": {
+    "example": "examples"
   }
 }
